# ipofetch

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  ruff.toml
.trae/documents/: feat-hkexmapping.md  prd.md  product_spec.md  rules_hkexnews.md  technical_architecture.md
.trae/rules/: project_rules.md
docs/: FILENAME_STRATEGY.md
src/ipofetch/: __init__.py  __main__.py  main.py  types.py
src/ipofetch/config/: __init__.py  settings.py
src/ipofetch/core/: __init__.py  api.py  hkex_api.py
src/ipofetch/downloader/: __init__.py  hkex_downloader.py  pdf_downloader.py
src/ipofetch/metadata/: __init__.py  generator.py  hkex_generator.py
src/ipofetch/parsers/: __init__.py  base.py  cninfo.py  hkexnews.py  sec_edgar.py
src/ipofetch/utils/: __init__.py  pdf_mapping.py
